--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,18 @@
-<footer id="footer" class="bg-black text-gray-400 py-12 px-6 opacity-0 transition-opacity duration-500">
-  <div class="container mx-auto text-center">
-    <h3 class="text-2xl font-bold text-white mb-4">Get In Touch</h3>
-    <p class="mb-2">Somewhere Address xyz ...</p>
-    <p class="mb-2">
-      <a href="mailto:contact@yourdomain.com" class="hover:text-white">contactmail</a>
-    </p>
-    <p class="mb-6">
-      <a href="tel:+1234567890" class="hover:text-white">Contact Number</a>
-    </p>
-    <div class="text-sm">
-      &copy; 2025 NishCorp. All Rights Reserved.
+<footer id="footer" class="bg-black text-gray-400 py-12 px-6 opacity-0 transition-opacity snappy">
+    <div class="container mx-auto text-center">
+        <h3 class="text-2xl font-bold text-white mb-4">Get In Touch</h3>
+        <p class="mb-2">Mumbai Maharashtra, India</p>
+        <p class="mb-2">
+        <a href="mailto:founder.nishcorp.tech@gmail.com" class="hover:text-white">contactmail</a>
+        </p>
+        <p class="mb-6">
+        <a href="tel:+91 7738866072" class="hover:text-white">Contact Number</a>
+        </p>
+        <div class="text-sm">
+        &copy; 2025 NishCorp. All Rights Reserved.
+        </div>
+        <div class="text-sm">
+            <a href="https://github.com/IamLegend509/">Website created by Suchit</a>
+        </div>
     </div>
-  </div>
 </footer>
